# dotfiles

./: .agignore  .envrc  .gitattributes  .gitconfig  .gitignore  .gitignore_global  .hyper.js  .hyperterm.js  .markdownlint.json  .markdownlintignore  .mise.toml  .oxfmtrc.jsonc  .pre-commit-check.sh  .pre-commit-config.yaml  .prettierignore  .rainbow_config.json  .shellcheckrc  .tigrc  .tmux.conf  .vimrc  .vimrc.old  .yamllint.yaml  .zprofile  .zshenv  .zshrc  310k2.itermcolors  Brewfile  CHEATSHEET.md  PARALLEL_REVIEW_REPORT.md  Package Control.sublime-settings  Preferences.sublime-settings  README.md  SETUP.md  base_setup.sh  biome.json  bunfig.toml  com.googlecode.iterm2.plist  dprint.json  install_brewcask.sh  install_mas.sh  (+3 more)
.claude/: CLAUDE.md  settings.json  settings.local.json
.gemini/: settings.json
.githooks/: commit-msg  pre-commit
.github/: copilot-instructions.md
.serena/: project.yml
.tmux/: new-session
docs/: CHEATSHEET.md  HOOKS_ARCHITECTURE.md  QUICKSTART.md  (+5 more)
scripts/pmo/: README.md  pyproject.toml  sync.py
scripts/pmo/dev/: keep_vba_verification.md  verify_keep_vba.py
scripts/pmo/lib/: atomic_io.py  backup.py  excel_io.py  migrate.py  ownership.py  reconcile.py  schema.py  snapshot.py  xlsm_writer.py  yaml_io.py
scripts/pmo/tests/: test_backup.py  test_excel_io.py  test_excel_io_xlsm.py  test_migrate_ids.py  test_ownership.py  test_reconcile.py  test_snapshot.py  test_sync.py  test_sync_deletion.py  test_xlsm_writer.py  test_yaml_io.py
scripts/pmo/tests/fixtures/: build_minimal_xlsm.py  minimal.xlsm  sample_pmo.yaml  sample_wbs.yaml
(+1443 files in other folders)
