[project]
name = "pmo-sync"
version = "0.1.0"
description = "PMO Excel ⇄ YAML one-way sync (pull / push, snapshot-guarded)"
requires-python = ">=3.13"
dependencies = [
  "openpyxl>=3.1.0",
  "ruamel.yaml>=0.18.0",
  "lxml>=5.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
